<resources>
    <string name="app_name">ClusterPass</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">ClusterPass</string>

    <string name="google_maps_key">ehhhhh_volevi!</string>

    <string name="menu_home">Home</string>

    <string name="menu_new_session">New Session</string>
    <string name="menu_your_steps">Your Steps</string>
    <string name="menu_find_path">Find Path</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
